// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PrevNextBar /> should render 1`] = `
<div>
  <div
    class="sc-dvUynV bfOGaB"
  />
</div>
`;

exports[`<PrevNextBar /> should render a disabled button 1`] = `
<div>
  <div
    class="sc-dvUynV bfOGaB"
  />
</div>
`;

exports[`<PrevNextBar /> should render only next button 1`] = `
<div>
  <div
    class="sc-dvUynV bfOGaB"
  >
    <button
      class="sc-hiKfDv eGHUCM sc-kTCsyW sc-jtiXyc gQmICt ismwYf"
    >
      Commencer
      <svg
        aria-hidden="true"
        class="sc-ellfGf ieKYEH"
        fill="none"
        viewBox="0 0 28 15"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m27.875 7.153-6-6.284a.526.526 0 0 0-.711-.023.496.496 0 0 0-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 0 0 .024.687.52.52 0 0 0 .711-.023l6-6.284a.506.506 0 0 0 0-.665z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<PrevNextBar /> should render only prev button 1`] = `
<div>
  <div
    class="sc-dvUynV bfOGaB"
  >
    <button
      class="sc-hiKfDv jPHFJK sc-kTCsyW gQmICt"
      type="button"
    >
      Précédent
    </button>
  </div>
</div>
`;
